# zoop

./: .gitignore  Cargo.toml  README.md  flake.nix  zfs-gen-info  zfs-gen-info-C  zoop-test
doc/: recv.txt
src/: lib.rs  main.rs
systemd/: zcopy@.service  zcopy@.timer
zfs-cmd-api/: Cargo.toml
zfs-cmd-api/examples/: list-pools.rs
zfs-cmd-api/src/: lib.rs  zfs.rs  zpool.rs
zfs-cmd-api/tests/: data.json  zfs.rs
zoop/: Cargo.toml  TODO  zfs-gen-info
zoop/src/: main.rs
zoop/systemd/: zcopy@.timer
zpool-device-locate/: Cargo.toml
