[package]
name = "zoop"
version = "0.1.1-dev"
authors = ["Cody P Schafer <dev@codyps.com>"]
description = "zfs sync application"
license = "AGPL-3.0"
homepage = "https://github.com/jmesmon/zoop"
repository = "https://github.com/jmesmon/zoop"
documentation = "https://docs.rs/zoop"

[dependencies]
clap = "*"
zfs-cmd-api = { path = "zfs-cmd-api", version = "*" }
fmt-extra = "*"

[profile.release]
debug = true
