[package]
name = "zfs-cmd-api"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
license = "AGPL-3"
description = "Interact with zfs via the supported cmd line tools"
documentation = "https://docs.rs/zfs-cmd-api"
repository = "https://github.com/jmesmon/zoop"

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
fmt-extra = "0.2.1"
bitflags = "1.1.0"
enumflags2 = "0.5.2"
enumflags2_derive = "0.5.0"
shell-words = "0.1.0"
