[package]
name = "zfs-cmd-api"
version = "0.2.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
license = "AGPL-3.0-or-later"
description = "Interact with zfs via the supported cmd line tools"
documentation = "https://docs.rs/zfs-cmd-api"
repository = "https://github.com/codyps/zoop"
edition = "2021"

[dependencies]
fmt-extra = "0.2.1"
enumflags2 = "0.7"
enumflags2_derive = "0.7"
log = "0.4.8"
tokio = { version = "1.43.0", features = ["process"] }
serde_json = "1.0.138"
eyre = "0.6.12"
thiserror = "2.0.11"
camino = "1.1.9"
serde = "1.0.217"
serde_derive = "1.0.217"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread"] }
tokio-macros = "2.5.0"
